# dataregistry

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  cli_cheat_sheet.html  contact.html  database_upgrades.html  dev_notes_database.html  dev_notes_spin.html  genindex.html  index.html  installation.html  installation_locally.html  objects.inv  pyproject.toml  reference_cli.html  reference_python.html  reference_schema.html  search.html  searchindex.js  tutorial_cli.html  tutorial_python.html  tutorial_setup.html  usage_examples.html
.doctrees/: cli_cheat_sheet.doctree  contact.doctree  database_upgrades.doctree  dev_notes_database.doctree  dev_notes_spin.doctree  environment.pickle  index.doctree  installation.doctree  installation_locally.doctree  reference_cli.doctree  reference_python.doctree  reference_schema.doctree  tutorial_cli.doctree  tutorial_python.doctree  tutorial_setup.doctree  usage_examples.doctree
.github/workflows/: ci.yml  documentation.yml  publish-to-pypi.yml
_sources/: contact.rst.txt  database_upgrades.rst.txt  dev_notes_database.rst.txt  index.rst.txt  installation.rst.txt  installation_locally.rst.txt  reference_cli.rst.txt  reference_python.rst.txt  reference_schema.rst.txt  tutorial_cli.rst.txt  tutorial_python.rst.txt  tutorial_setup.rst.txt
docs/source/: cli_cheat_sheet.md  conf.py  contact.rst  database_upgrades.rst  dev_notes_database.rst  dev_notes_spin.rst  for_maintainers.rst  index.rst  installation.rst  installation_locally.rst  overview.rst  pipeline_dataset.rst  quickstart.rst  reference_cli.rst  reference_python.rst  reference_schema.rst  schema.rst  standalone_dataset.rst  tutorial_cli.rst  tutorial_python.rst  tutorial_setup.rst  usage.rst  usage_cli.rst  usage_examples.rst  usage_python.rst
scripts/: authorize_globus.py  create_registry_db.py  create_registry_schema.py  create_schema_dirs.sh  create_test_entries.py  register_cli.py
scripts/schema_migration/: fetch_archive_support.py  update_relative_path_null_constraint.py
src/: __init__.py
src/cli/: cli.py  query.py  register.py
src/dataRegistry/: create_registry_db.py
src/dataregistry/: DREGS.py  DataRegistry.py  __init__.py  _version.py  db_basic.py  exceptions.py  git_util.py  query.py  registrar.py  registrar_util.py
src/dataregistry_cli/: cli.py  delete.py  modify.py  path.py  query.py  register.py  show.py
tests/: a_config.yaml  drop_all.sql  test_register.py
tests/ci/: create_test_entries.py  create_test_entries_cli.sh  test_cli.sh  test_query.py
tests/end_to_end_tests/: create_data.sh  create_test_entries.py  create_test_entries_cli.sh  database_test_utils.py  test_cli.py  test_database.py  test_database_functions.py  test_delete_dataset.py  test_end_to_end.py  test_end_to_end_cli.py  test_end_to_end_python_api.py  (+15 more)
(+43 files in other folders)
