[build-system]
requires = ["setuptools >= 61.0"] # PEP 621 compliant
build-backend = "setuptools.build_meta"

[project]
name = "dataregistry"
version = "0.1.1"
description = "Creation and user API for DESC data registry."
readme = "README.md"
authors = [{ name = "Joanne Bogart", email = "jrb@slac.stanford.edu" }]
license = { file = "LICENCE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["desc", "python", "registry"]
dependencies = [
    'psycopg2',
    'sqlalchemy',
    'importlib-metadata;python_version<"3.8"',
    'pyyaml'
]
requires-python = ">=3.7" # For setuptools >= 61.0 support

[tool.setuptools.packages.find]
where = ["src"]
