[build-system]
requires = ["setuptools >= 61.0"] # PEP 621 compliant
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "dataregistry"
description = "Creation and user API for DESC data registry."
readme = "README.md"
authors = [
    { name = "Joanne Bogart", email = "jrb@slac.stanford.edu" },
    { name = "Stuart McAlpine", email = "stuart.mcalpine@fysik.su.se" }
]
license = { file = "LICENCE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["desc", "python", "registry"]
dependencies = [
    'psycopg2',
    'sqlalchemy',
    'pyaml',
    'GitPython',
    'pandas'
]
requires-python = ">=3.7" # For setuptools >= 61.0 support

[tool.setuptools.dynamic]
version = {attr = "dataregistry._version.__version__"}

[project.optional-dependencies]
docs = ["sphinx_rtd_theme"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dregs = "cli.cli:main"

[tool.setuptools.package-data]
"pycosmoview" = ["site_config/site_rootdir.yaml"]
